apps/comfyui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comfyui
  namespace: comfyui
  labels:
    app: comfyui
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: comfyui
  template:
    metadata:
      labels:
        app: comfyui
    spec:
      nodeSelector:
        kubernetes.io/hostname: d1581with6600xt
      containers:
        - name: comfyui
          image: yanwk/comfyui-boot:rocm
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8188
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: "4000m"
              memory: "8Gi"
            limits:
              cpu: "16000m"
              memory: "32Gi"
          volumeMounts:
            - name: kfd
              mountPath: /dev/kfd
            - name: dri
              mountPath: /dev/dri
            - name: comfyui-storage
              mountPath: /root/ComfyUI
      volumes:
        - name: kfd
          hostPath:
            path: /dev/kfd
        - name: dri
          hostPath:
            path: /dev/dri
        - name: comfyui-storage
          persistentVolumeClaim:
            claimName: comfyui-data
